k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  type: LoadBalancer
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 1337

# apiVersion: v1
# kind: Service
# metadata:
#   name: backend
# spec:
#   type: ClusterIP
#   selector:
#     app: backend
#   ports:
#     - port: 1337
#       targetPort: 1337
